# ds-caselaw-custom-api-client

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MIGRATION_GUIDE.md  README.md  REFACTORING_PLAN.md  demo.py  main.py  pull_request_template.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg  smoketest.py  testbed-insert-judgment.py  testbed-search.py  testbed.py  upload.py
.github/: pull_request_template.md
.github/workflow/: publish.yml
.github/workflows/: codeql.yml  docs.yml  enforce-changelog.yaml  publish.yml  secrets.yml  test.yml
assertions/: README.md  all_latest_versions.xqy  assert.py  must_have_collection.xqy  not_two_collections.xqy
script/: build_xquery_type_dicts  clean_docs.md  clean_s3.py  test_clean_s3.py
smoketest/: smoketest-setup.xqy  smoketest.py
src/caselawclient/: Client.py  __init__.py  content_hash.py  errors.py  factories.py  identifier_resolution.py  identifiers.py  search_parameters.py  search_result.py  types.py  xml_helpers.py  xml_tools.py  xquery_type_dicts.py
src/caselawclient/client_helpers/: __init__.py  search_helpers.py
src/caselawclient/managers/merge/: __init__.py  checks.py
src/caselawclient/models/: __init__.py  documents.py  history.py  judgments.py  neutral_citation_mixin.py  parser_logs.py  press_summaries.py  search_results.py
src/caselawclient/models/documents/: __init__.py  body.py  comparison.py  exceptions.py  metadata.py  statuses.py  stub.py  versions.py  xml.py
src/caselawclient/models/documents/metadata/: base.py  registry.py
src/caselawclient/models/documents/metadata/fields/: collection.py  exceptions.py  field.py  resolution.py  source.py  unpacker.py
src/caselawclient/models/documents/metadata/types/: case_number.py  categories.py  court.py  date.py  jurisdiction.py  name.py
src/caselawclient/models/documents/templates/: judgment.xml  judgment.xqy  original.xml
src/caselawclient/models/documents/transforms/: html.xsl
src/caselawclient/models/identifiers/: __init__.py  collection.py  exceptions.py  fclid.py  neutral_citation.py  press_summary_ncn.py  unpacker.py
src/caselawclient/models/utilities/: __init__.py  aws.py  dates.py  move.py
src/caselawclient/responses/: __init__.py  search_response.py  search_result.py
src/caselawclient/responses/xsl/: search_match.xsl
src/caselawclient/speeddemo/: demo.py
src/caselawclient/xquery/: append_history.xqy  break_judgment_checkout.xqy  check_content_hash_unique_by_uri.xqy  checkin_judgment.xqy  checkout_judgment.xqy  copy_document.xqy  copy_judgment.xqy  delete_judgment.xqy  document_collections.xqy  get_annotation.xqy  get_combined_stats_table.xqy  get_components_for_document.xqy  get_courts_with_document_count.xqy  get_highest_enrichment_version.xqy  get_highest_parser_version.xqy  get_history.xqy  get_judgment.xqy  get_judgment_checkout_status.xqy  get_judgment_version.xqy  get_last_modified.xqy  get_linked_caselaw.xqy  get_locked_documents.xqy  get_metadata_citation.xqy  get_metadata_court.xqy  get_metadata_name.xqy  get_metadata_work_date.xqy  get_missing_fclid.xqy  get_next_document_sequence_number.xqy  get_pending_enrichment_for_version.xqy  get_pending_parse_for_version.xqy  get_pending_parse_for_version_count.xqy  get_pending_parse_for_version_documents.xqy  get_properties_for_search_results.xqy  get_property.xqy  get_property_as_node.xqy  get_recently_enriched.xqy  get_recently_parsed.xqy  get_version_created.xqy  insert_document.xqy  insert_judgment.xqy  (+33 more)
src/caselawclient/xslt/: modify_xml_live.xsl  sample.xsl
src/ds-caselaw-marklogic-client/: Client.py
src/ds_caselaw_marklogic_api_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  factories.py  test_client.py  test_factories.py  test_helpers.py  test_speed.py  test_types.py  test_xml_tools.py
tests/client/: conftest.py  test_advanced_search.py  test_checkout_checkin_judgment.py  test_client.py  test_eval_xslt.py  test_get_annotation.py  test_get_document.py  test_get_document_by_uri.py  test_get_judgment_and_versions.py  test_get_press_summaries_for_document_uri.py  test_get_set_metadata.py  test_get_set_properties.py  test_get_version_annotation.py  test_get_version_created_datetime.py  test_identifier_resolution.py  test_parse_url.py  test_reporting.py  test_restore_document.py  test_save_copy_delete_judgment.py  test_search_and_decode_response.py  test_search_and_parse_results.py  test_search_parameters.py  test_search_result.py  test_search_result_meta.py  test_search_results.py  test_stats.py  test_user_privileges.py  test_user_roles.py  test_validate_document.py  test_verify_show_unpublished.py
tests/client_helpers/: test_get_document_type_class.py  test_search_helpers.py  test_version_annotation.py  test_xml_helpers.py
tests/content_hash/: test_content_hash.py
tests/managers/merge/: test_merge_checks.py  test_merge_manager.py  test_mergemanager_merge_methods.py  test_mergemanager_safety_methods.py
tests/models/: test_document_xml.py  test_documents.py  test_judgments.py  test_parser_logs.py  test_press_summaries.py
tests/models/documents/: test_document_body.py  test_document_body_setters.py  test_document_compare.py  test_document_identifiers.py  test_document_merge.py  test_document_metadata.py  test_document_metadata_fields.py  test_document_save.py  test_document_stub.py  test_document_validation.py  test_document_verbs.py  test_document_version_annotation.py  test_document_xml.py  test_documents.py
tests/models/documents/metadata/fields/: test_metadata_fields.py
tests/models/documents/xslt/: test_standard_judgment.html  test_standard_judgment.xml
tests/models/identifiers/: test_identifer_unpacking.py  test_identifier_constraints.py  test_identifier_fclids.py  test_identifier_ncns.py  test_identifier_press_summaries.py  test_identifiers.py
tests/models/utilities/: test_util_dates.py  test_utilities.py
tests/responses/: test_search_response.py  test_search_result.py
tests/xml_tools/: test_xml_tools.py
