[tool.poetry]
name = "ds-caselaw-marklogic-api-client"
version = "37.1.0"
description = "An API client for interacting with the underlying data in Find Caselaw."
authors = ["The National Archives"]
homepage = "https://github.com/nationalarchives/ds-caselaw-custom-api-client"
keywords = ["national archives", "caselaw"]
readme = "README.md"
packages = [
    { include = "caselawclient", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10.0"
certifi = ">=2025.4.26,<2025.5.0"
charset-normalizer = "^3.0.0"
django-environ = ">=0.12.0"
idna = "^3.4"
requests = "^2.28.2"
requests-toolbelt = ">=0.10.1,<1.1.0"
memoization = "^0.4.0"
lxml = "^5.0.0"
ds-caselaw-utils = "^2.0.0"
boto3 = "^1.26.112"
typing-extensions = "^4.7.1"
mypy-boto3-s3 = "^1.26.104"
mypy-boto3-sns = "^1.26.69"
pytz = ">2024"
python-dateutil = "^2.9.0-post.0"
saxonche = "^12.5.0"
sqids = "^0.5.0"

[tool.poetry.group.dev.dependencies]
coverage = "7.8.0"
pytest = "8.3.5"
beautifulsoup4 = "4.13.4"
responses = "0.25.7"
python-dotenv = "1.1.0"
time-machine = "2.16.0"
moto = {version = "5.1.4", extras = ["all"]}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_incremental = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "write: the test deliberately changes the Marklogic DB')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # longlines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
extend-select = ["W", "I", "SLF", "SIM"]
# extend-select = [ "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
#                  "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLOT", "TID", "TCH", "INT", "PTH",
#                  "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101"]  # `assert` is fine in tests
"tests/client/test_client.py" = ["SLF001"]  # TODO: This really shouldn't be the case, but it's not important to fix right now.

# things skipped:
# N: naming, possibly good
# D: docstrings missing throughout
# ANN: annotations missing throughout
# FBT: not convinced boolean trap worth auto-banning.
# CPY: copyright at top of each file
# G: logging warnings -- fstrings bad?
# ARG: sometimes you need to accept arguments.
# TD: somewhat finicky details about formatting TODOs
# FIX: flags todos: possible to add -- skipped for now
# ERA: lots of false positives, not a good autofix
# PD, NPY, AIR: ignored, panda / numpy / airflow specific
# FURB: not yet out of preview
