[tool.poetry]
name = "ds-caselaw-marklogic-api-client"
version = "45.0.0"
description = "An API client for interacting with the underlying data in Find Caselaw."
authors = ["The National Archives"]
homepage = "https://github.com/nationalarchives/ds-caselaw-custom-api-client"
keywords = ["national archives", "caselaw"]
readme = "README.md"
packages = [
    { include = "caselawclient", from = "src" },
]

[tool.poetry.dependencies]
python = "3.14.4"
certifi = "==2026.2.25"
charset-normalizer = "3.4.7"
django-environ = "==0.13.0"
idna = "3.11"
requests = "2.33.1"
requests-toolbelt = "==1.0.0"
memoization = "0.4.0"
lxml = "6.1.0"
ds-caselaw-utils = "4.1.1"
boto3 = "1.42.92"
typing-extensions = "4.15.0"
mypy-boto3-s3 = "1.42.85"
mypy-boto3-sns = "1.42.3"
pytz = "==2026.1.post1"
python-dateutil = "2.9.0.post0"
saxonche = "12.9.0"
sqids = "0.5.2"
defusedxml = "0.7.1"
pydantic = "2.12.4"

[tool.poetry.group.dev.dependencies]
coverage = "7.13.5"
pytest = "9.0.3"
pytest-cov = "7.1.0"
beautifulsoup4 = "4.14.3"
responses = "0.26.0"
python-dotenv = "1.2.2"
time-machine = "3.2.0"
moto = {version = "5.1.22", extras = ["all"]}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^16.0.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_incremental = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "write: the test deliberately changes the Marklogic DB')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # longlines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
extend-select = ["W", "I", "SLF", "SIM", "C90", "S"]
# extend-select = [ "B", "Q", "I", "UP", "YTT", "ASYNC", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
#                  "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLOT", "TID", "TCH", "INT", "PTH",
#                  "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
unfixable = ["ERA"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101"] # `assert` is fine in tests
"smoketest/*" = ["S101"] # `assert` is fine in tests
"tests/client/test_client.py" = ["SLF001"]  # TODO: This really shouldn't be the case, but it's not important to fix right now.

# things skipped:
# N: naming, possibly good
# D: docstrings missing throughout
# ANN: annotations missing throughout
# FBT: not convinced boolean trap worth auto-banning.
# CPY: copyright at top of each file
# G: logging warnings -- fstrings bad?
# ARG: sometimes you need to accept arguments.
# TD: somewhat finicky details about formatting TODOs
# FIX: flags todos: possible to add -- skipped for now
# ERA: lots of false positives, not a good autofix
# PD, NPY, AIR: ignored, panda / numpy / airflow specific
# FURB: not yet out of preview
