[metadata]
name = ds-caselaw-marklogic-api-client
version = 4.9.2
author = The National Archives
description = An API client for interacting with the Caselaw Marklogic instance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nationalarchives/ds-caselaw-custom-api-client
project_urls =
    Bug Tracker = https://github.com/nationalarchives/ds-caselaw-custom-api-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    django-environ
    requests-toolbelt
    memoization
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
caselawclient = xquery/*.xqy

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
