[options]
package_dir =
    = src
packages = find:
install_requires =
    django-environ
    requests-toolbelt
    memoization
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
caselawclient = xquery/*.xqy

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
