[options]
package_dir =
    = src
packages = find:
install_requires =
    django-environ
    requests-toolbelt
    memoization
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
caselawclient = xquery/*.xqy

[mypy]
python_version = 3.13
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = pydantic.mypy
